#27: use maven exec to call jlink/jpackage instead of script to stay in maven land